# ci-cd-test-cpp

./: Building.cpp  BuildingCollection.cpp  BuildingCollection.h  BuildingIterator.h  CMakeLists.txt  Citizen.h  FlatTaxStrategy.cpp  FlatTaxStrategy.h  Main.cpp  Makefile  ProgressiveTaxStrategy.cpp  ProgressiveTaxStrategy.h  README.md  TaxAuthority.cpp  TaxAuthority.h
.github/workflows/: c-cpp.yml  ci.yml
headers/: Building.h  BuildingCollection.h  TaxAuthority.h  TaxStrategy.h
src/: BuildingIterator.cpp  TaxAuthority.cpp
tests/: building_test.cpp  citizen_test.cpp  tax_system_test.cpp
